--- a/app.json
+++ b/app.json
@@ -1,10 +1,13 @@
 {
   "pages": [
-    "pages/news/news",
-    "pages/newsdetail/newsdetail",
-    "pages/aboutus/aboutus",
+    "pages/index/index",
 
-    "pages/index/index"
+    "pages/news/news",
+
+    "pages/newsdetail/newsdetail",
+
+    "pages/aboutus/aboutus"
+
   ],
   "window": {
     "backgroundTextStyle": "light",
